Fixed lingering terms.  Left-aligned

--- a/app/views/glossary/index.css.scss
+++ b/app/views/glossary/index.css.scss
@@ -101,7 +101,7 @@
     td {
       padding-left: 10px;
       padding-right: 10px;
-      text-align: center;
+      text-align: left;
       border: 0px;
       @include border-box;
 
