--- a/app/views/commits/show.slim
+++ b/app/views/commits/show.slim
@@ -44,5 +44,6 @@ hr.divider
             - if finished
               |  
               i.icon-ok
-
-
+            - else
+              |  
+              i.icon-remove
