Changes up search UI.  UI supports exact search.  Still need to implement it in Search Controller

--- a/app/assets/stylesheets/base/_controls.scss
+++ b/app/assets/stylesheets/base/_controls.scss
@@ -155,6 +155,7 @@ input[type=checkbox] {
   display: inline-block;
   line-height: 1em;
   margin: 0;
+  margin-right: 7px;
   padding: 0;
   width: 1em !important;
   height: 1em !important;
