--- a/app/assets/stylesheets/pages/translation_units.scss
+++ b/app/assets/stylesheets/pages/translation_units.scss
@@ -2,6 +2,48 @@
 @import "css3-mixins";
 
 body.translation_units {
+  .filter-bar {
+    select {
+      text-transform: capitalize;
+    }
+
+    .main {
+      input[type="text"] { width: 700px; }
+      select {width: 150px; }
+      input + input, input + select, select + input { 
+        margin-left: 15px;
+      }
+      #expand-search {
+        margin-right: 10px;
+        font-weight: 500;
+        font-size: 30px;
+        @include transition(all, 0.3s, ease);
+        &:hover {
+          cursor: pointer;
+          color: $dark-blue;
+          @include transform(rotate(90deg));  
+        }
+        &.active {
+          color: $dark-blue;
+          @include transform(rotate(90deg));   
+        }
+      }
+
+    }
+
+    .collapse {
+      margin-top: 30px;
+      margin-left: 40px;
+      display: none;
+      .controls {
+        width: 480px;
+        input, select, .twitter-typeahead { width: 100%; }
+      }
+    }
+
+  }
+
+
   table {
     .locale-td {
       font-weight: bold;
