--- a/app/views/search/commits.js.coffee.erb
+++ b/app/views/search/commits.js.coffee.erb
@@ -13,6 +13,17 @@
 #    limitations under the License.
 
 $(window).ready ->
+  $("#expand-search").click () ->
+    if $(".collapse").data("toggle")
+      $("#expand-search").removeClass("active")
+      $(".collapse").data("toggle", false)
+      $(".collapse").slideUp()
+    else 
+      $("#expand-search").addClass("active")
+      $(".collapse").data("toggle", true)
+      $(".collapse").slideDown()
+
+  
   formatTable = (commitTable) ->
     commitTable.empty()
     thead = $('<thead/>').appendTo(commitTable)
