--- a/app/views/search/translations.slim
+++ b/app/views/search/translations.slim
@@ -30,29 +30,37 @@ hr.divider
   .filter-bar
     / translation_search_bar
     = form_tag(search_translations_url, method: 'GET', id: 'translation-search-form', class: 'filter form-inline')
-      .row 
-        | Find 
-        = text_field_tag 'query', '', id: 'search-field', placeholder: 'query'
-        |  in 
+      .main
+        = text_field_tag 'query', '', id: 'search-field', placeholder: 'Translation Query'
         = select_tag 'field', options_for_select([\
                                                      %w(source searchable_source_copy),\
                                                      %w(translation searchable_copy),\
                                                  ]), id: 'field-select', class: 'span2'
-        |  with translation in 
-        - if current_user.approved_locales.any?
-          = select_tag 'target_locales', options_for_select(current_user.approved_locales.map { |l| [l.name, l.rfc5646] })
-        - else
-          / locale field
-          = text_field_tag 'target_locales', '', class: 'locale-field', id: '', placeholder: 'any target locale'
+        = submit_tag 'Search', class: 'primary'
+        .pull-right#expand-search
+          i.icon-angle-right
         
-      .row 
-        |  for 
-        - project_list = Project.order('LOWER(name) ASC').map { |pr| [pr.name, pr.id] }
-        - project_list.unshift ['all', nil]
-        = select_tag 'project_id', options_for_select(project_list), style: 'width: 200px;'
-        |  translated by 
-        = select_tag 'translator_id', options_for_select(User.order('email ASC').map { |u| [u.name, u.id] }.unshift(['anyone', nil])), style: 'width: 200px'
-        = submit_tag 'search', class: 'primary'
+      .collapse
+        .control-group 
+          = label_tag 'target_locales', 'Target Locales', class: 'control-label'
+          .controls
+            - if current_user.approved_locales.any?
+              = select_tag 'target_locales', options_for_select(current_user.approved_locales.map { |l| [l.name, l.rfc5646] })
+            - else 
+              = text_field_tag 'target_locales', '', class: 'locale-field', id: '', placeholder: 'any target locale'
+
+
+        .control-group 
+          = label_tag 'project_id', 'Projects', class: 'control-label'
+          .controls
+            - project_list = Project.order('LOWER(name) ASC').map { |pr| [pr.name, pr.id] }
+            - project_list.unshift ['all', nil]
+            = select_tag 'project_id', options_for_select(project_list)
+
+        .control-group 
+          = label_tag 'translator_id', 'Translator', class: 'control-label'
+          .controls
+            = select_tag 'translator_id', options_for_select(User.order('email ASC').map { |u| [u.name, u.id] }.unshift(['anyone', nil]))        
 
   
   / translation_grid
