Adds translator dropdown using chosen.js

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,7 @@
 
 // ----- PARTIALS
 @import "partials/alerts";
+@import "partials/chosen";
 @import "partials/datepicker";
 @import "partials/footer";
 @import "partials/infinite_scroll";
