--- a/app/assets/stylesheets/pages/search.css.scss
+++ b/app/assets/stylesheets/pages/search.css.scss
@@ -34,7 +34,7 @@ body.search {
     .collapse {
       margin-top: 30px;
       margin-left: 40px;
-      // display: none;
+      display: none;
       .controls {
         width: 480px;
         input, select, .twitter-typeahead { width: 100%; }
