Changed Translation Panel to Workbench.  Automatically check 'New' now for review mode

--- a/app/assets/javascripts/translate_review_list.js.coffee.erb
+++ b/app/assets/javascripts/translate_review_list.js.coffee.erb
@@ -23,7 +23,7 @@ class root.TranslateReviewList
   #
   # @param [jQuery object] form The form containing the locale field.
   # @param [jQuery object] list The div to contain the project list.
-  # @param [String] URL The URL template for the translation panel URL, with
+  # @param [String] URL The URL template for the translation workbench URL, with
   #   "REPLACEME" where the locale RFC 5646 code should go.
   # @param [String] action Either "translation" or "review"; affects display
   #   of projects.
