--- a/app/assets/stylesheets/partials/_translation_workbench.scss
+++ b/app/assets/stylesheets/partials/_translation_workbench.scss
@@ -1,7 +1,7 @@
 @import "base/vars";
 @import "css3-mixins";
 
-.translation-panel {
+.translation-workbench {
   width: 100%;
   // height: 900px;
   border-top: none;
