--- a/app/views/locale/projects/show.js.coffee.erb
+++ b/app/views/locale/projects/show.js.coffee.erb
@@ -23,8 +23,8 @@ $(document).ready ->
     url = '/locales/' + encodeURIComponent(locale) + '/projects/' + encodeURIComponent(project) + '?commit=' + sha    
     window.location = url
   
-  new TranslationPanel(
-    $(".translation-panel"), 
+  new TranslationWorkbench(
+    $(".translation-workbench"), 
     $(".filter-bar form"), 
     "<%= locale_project_translations_url(@locale, @project, format: 'json') %>", 
     JSON.parse("<%= escape_javascript @glossary_entries.to_json %>"),
