--- a/app/assets/stylesheets/pages/translation_units.scss
+++ b/app/assets/stylesheets/pages/translation_units.scss
@@ -44,6 +44,7 @@ body.translation_units {
 
 
   table {
+    a { text-decoration: underline; }
     .locale-td {
       font-weight: bold;
       white-space: nowrap;
