--- a/app/views/search/translations.slim
+++ b/app/views/search/translations.slim
@@ -59,4 +59,4 @@ hr.divider
 
   
   / translation_grid
-  table.table.hover-rows#translations data-url=search_translations_url(format: 'json')
+  table.table#translations data-url=search_translations_url(format: 'json')
