--- a/app/views/translation_units/index.slim
+++ b/app/views/translation_units/index.slim
@@ -50,4 +50,4 @@ hr.divider
               / locale field
               = text_field_tag 'target_locales', '', class: 'locale-field', id: '', placeholder: 'any target locale'
 
-  table.table.hover-rows#translation_units data-url=translation_units_url(format: 'json')
+  table.table#translation_units data-url=translation_units_url(format: 'json')
