--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -150,7 +150,7 @@ hr.divider
                   type="button"
                   data-sha=commit.revision 
                   data-project=commit.project.to_param
-                  data-locale=locale
+                  data-locale=locale.rfc5646
                   value="Translate"] 
             - elsif current_user.approved_locales.any?
               td 
@@ -159,7 +159,7 @@ hr.divider
                   type="button"
                   data-sha=commit.revision 
                   data-project=commit.project.to_param
-                  data-locale=locale
+                  data-locale=locale.rfc5646
                   value="Translate"] 
             - else 
               td
