Adds affix javascript styling to home dashboard

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,6 +35,7 @@
 @import "base/flash";
 
 // ----- PARTIALS
+@import "partials/affix";
 @import "partials/alerts";
 @import "partials/chosen";
 @import "partials/datepicker";
